refactor: 親子テーブルによる管理に変更(ドキュメント通りに戻す)
